--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.63.6",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0",
     "web-vitals": "^3.4.0"
